--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -1,185 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:gravity="center">
+    android:layout_width="@dimen/_275sdp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    app:cardCornerRadius="@dimen/_8sdp"
+    app:cardUseCompatPadding="true">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_8sdp"
-        app:cardCornerRadius="@dimen/_8sdp"
-        app:cardUseCompatPadding="true">
+        android:layout_height="match_parent"
+        android:padding="@dimen/_15sdp"
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/_15sdp"
-            android:background="@color/white"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_15sdp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_27sdp"
+                android:layout_weight="0.9"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/mNama"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.9"
+                    android:text="Nama Pengguna"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/_12ssp"
+                    android:textStyle="bold"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical" />
+
+                <TextView
+                    android:id="@+id/cStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_minus2sdp"
+                    android:visibility="gone"
+                    android:text="Tag"
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/_9ssp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/mClose"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:background="@drawable/bg_button_3"
+                android:layout_gravity="center"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_close" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/mAvatar"
+            android:layout_width="@dimen/_70sdp"
+            android:layout_height="@dimen/_70sdp"
+            android:layout_marginBottom="@dimen/_12sdp"
+            android:layout_gravity="center"
+            android:src="@drawable/avatar" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:background="@drawable/bg_button_1"
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/mAkun"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_15sdp"
-                android:orientation="horizontal">
+                android:layout_height="@dimen/_33sdp"
+                android:padding="@dimen/_8sdp"
+                android:orientation="horizontal"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="@drawable/bg_button_1">
 
-                <LinearLayout
+                <ImageView
+                    android:layout_width="@dimen/_18sdp"
+                    android:layout_height="@dimen/_18sdp"
+                    android:src="@drawable/ic_user"
+                    android:tint="@color/white" />
+
+                <TextView
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/_27sdp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="0.9"
-                    android:layout_marginStart="@dimen/_8sdp"
-                    android:orientation="vertical">
+                    android:layout_marginHorizontal="@dimen/_12sdp"
+                    android:text="Account"
+                    android:textSize="@dimen/_12ssp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center" />
 
-                    <TextView
-                        android:id="@+id/mNama"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.9"
-                        android:text="Nama Pengguna"
-                        android:textColor="@color/gray"
-                        android:textSize="@dimen/_12ssp"
-                        android:textStyle="bold"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:gravity="center_vertical" />
-
-                    <TextView
-                        android:id="@+id/cStatus"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_minus2sdp"
-                        android:visibility="gone"
-                        android:text="Tag"
-                        android:textColor="@color/gray"
-                        android:textSize="@dimen/_9ssp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/mClose"
-                    android:layout_width="@dimen/_25sdp"
-                    android:layout_height="@dimen/_25sdp"
-                    android:background="@drawable/bg_button_3"
-                    android:layout_gravity="center"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="@dimen/_17sdp"
-                        android:layout_height="@dimen/_17sdp"
-                        android:src="@drawable/ic_close" />
-                </LinearLayout>
+                <ImageView
+                    android:id="@+id/ma"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:src="@drawable/ic_arrow"
+                    android:layout_gravity="center" />
             </LinearLayout>
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/mAvatar"
-                android:layout_width="@dimen/_70sdp"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_marginBottom="@dimen/_15sdp"
-                android:layout_gravity="center"
-                android:src="@drawable/avatar" />
-
             <LinearLayout
+                android:id="@+id/maSub"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:background="@drawable/bg_button_1"
+                android:visibility="gone"
+                android:background="@drawable/bg_button_5"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/mAkun"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/maSub1"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_33sdp"
-                    android:padding="@dimen/_8sdp"
-                    android:orientation="horizontal"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:background="@drawable/bg_button_1">
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_akun"
+                    tools:itemCount="3" />
+
+                <LinearLayout
+                    android:id="@+id/maSub2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="@dimen/_5sdp"
+                    android:paddingHorizontal="@dimen/_8sdp"
+                    android:background="@drawable/bg_button_5">
 
                     <ImageView
-                        android:id="@+id/ma1"
                         android:layout_width="@dimen/_18sdp"
                         android:layout_height="@dimen/_18sdp"
-                        android:src="@drawable/ic_user"
+                        android:src="@drawable/ic_plus"
                         android:tint="@color/white" />
 
                     <TextView
-                        android:id="@+id/ma2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.9"
                         android:layout_marginHorizontal="@dimen/_12sdp"
-                        android:text="Akun"
+                        android:text="Tambah Akun"
                         android:textSize="@dimen/_12ssp"
-                        android:textColor="@color/white"
-                        android:layout_gravity="center" />
-
-                    <ImageView
-                        android:id="@+id/ma3"
-                        android:layout_width="@dimen/_15sdp"
-                        android:layout_height="@dimen/_15sdp"
-                        android:src="@drawable/ic_arrow"
+                        android:textColor="@color/gray"
                         android:layout_gravity="center" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/maSub"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:background="@color/light_gray"
-                    android:orientation="vertical">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/maSub1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        tools:listitem="@layout/item_akun"
-                        tools:itemCount="3" />
-
-                    <LinearLayout
-                        android:id="@+id/maSub2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingVertical="@dimen/_5sdp"
-                        android:paddingHorizontal="@dimen/_8sdp">
-
-                        <ImageView
-                            android:layout_width="@dimen/_18sdp"
-                            android:layout_height="@dimen/_18sdp"
-                            android:src="@drawable/ic_plus"
-                            android:tint="@color/white" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.9"
-                            android:layout_marginHorizontal="@dimen/_12sdp"
-                            android:text="Tambah Akun"
-                            android:textSize="@dimen/_12ssp"
-                            android:textColor="@color/gray"
-                            android:layout_gravity="center" />
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:gravity="center"
-                android:padding="@dimen/_5sdp"
-                android:background="@drawable/bg_button_1">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Logout"
-                    android:textSize="@dimen/_13ssp"
-                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/mPengaturan"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_33sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:padding="@dimen/_8sdp"
+            android:orientation="horizontal"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/bg_button_1">
+
+            <ImageView
+                android:layout_width="@dimen/_18sdp"
+                android:layout_height="@dimen/_18sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_gear" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                android:text="Pengaturan"
+                android:textSize="@dimen/_13ssp"
+                android:textColor="@color/white" />
+        </LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
