--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -29,11 +29,11 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/mNama"
+                    android:id="@+id/mName"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="0.9"
-                    android:text="Nama Pengguna"
+                    android:text="Name"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/_12ssp"
                     android:textStyle="bold"
@@ -42,7 +42,7 @@
                     android:gravity="center_vertical" />
 
                 <TextView
-                    android:id="@+id/cStatus"
+                    android:id="@+id/mTag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_minus2sdp"
@@ -69,7 +69,7 @@
         </LinearLayout>
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/mAvatar"
+            android:id="@+id/mPhoto"
             android:layout_width="@dimen/_70sdp"
             android:layout_height="@dimen/_70sdp"
             android:layout_marginBottom="@dimen/_12sdp"
@@ -84,7 +84,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/mAkun"
+                android:id="@+id/mAccount"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_33sdp"
                 android:padding="@dimen/_8sdp"
@@ -129,8 +129,8 @@
                     android:id="@+id/maSub1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_akun"
-                    tools:itemCount="3" />
+                    tools:listitem="@layout/item_account"
+                    android:overScrollMode="never" />
 
                 <LinearLayout
                     android:id="@+id/maSub2"
@@ -151,7 +151,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.9"
                         android:layout_marginHorizontal="@dimen/_12sdp"
-                        android:text="Tambah Akun"
+                        android:text="Add Account"
                         android:textSize="@dimen/_12ssp"
                         android:textColor="@color/gray"
                         android:layout_gravity="center" />
@@ -160,7 +160,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/mPengaturan"
+            android:id="@+id/mSetting"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_33sdp"
             android:layout_marginTop="@dimen/_8sdp"
@@ -180,7 +180,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_12sdp"
-                android:text="Pengaturan"
+                android:text="Setting"
                 android:textSize="@dimen/_13ssp"
                 android:textColor="@color/white" />
         </LinearLayout>
