--- a/app/src/main/res/layout/dialog_sign.xml
+++ b/app/src/main/res/layout/dialog_sign.xml
@@ -130,7 +130,7 @@
                     <ImageView
                         android:layout_width="@dimen/_17sdp"
                         android:layout_height="@dimen/_17sdp"
-                        android:src="@drawable/ic_user" />
+                        android:src="@drawable/ic_identity" />
                 </LinearLayout>
 
                 <EditText
