--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -43,11 +43,11 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/cNama"
+                android:id="@+id/cName"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.9"
-                android:text="Nama Pengguna"
+                android:text="Name"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/white"
