--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/_275sdp"
+    android:layout_width="@dimen/_300sdp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     app:cardCornerRadius="@dimen/_8sdp"
@@ -49,8 +49,7 @@
                     android:visibility="gone"
                     android:text="Tag"
                     android:textColor="@color/gray"
-                    android:textSize="@dimen/_9ssp"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/_9ssp" />
             </LinearLayout>
 
             <LinearLayout
