--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,62 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_8sdp"
-    android:orientation="horizontal">
+    android:padding="@dimen/_5sdp"
+    android:gravity="center"
+    android:background="@drawable/bg_button_6">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/cProfile"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
+        android:id="@+id/aPhoto"
+        android:layout_width="@dimen/_25sdp"
+        android:layout_height="@dimen/_25sdp"
         android:src="@drawable/avatar" />
 
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/aName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.9"
         android:layout_marginStart="@dimen/_8sdp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/cNama"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nama Pengguna"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end" />
-
-        <TextView
-            android:id="@+id/cIsi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Isi Chat"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:orientation="vertical"
-        android:gravity="end">
-
-        <TextView
-            android:id="@+id/cWaktu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Waktu"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold" />
-    </LinearLayout>
+        android:text="Name"
+        android:textSize="@dimen/_12ssp"
+        android:textColor="@color/gray"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 </LinearLayout>
