--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,9 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#009FFF</color>
     <color name="gray">#808080</color>
+    <color name="gray_2">#636363</color>
     <color name="light_gray">#D6D6D6</color>
+    <color name="light_gray_2">#A6A6A6</color>
     <color name="red">#FF4823</color>
     <color name="yellow">#FFC107</color>
     <color name="light_green">#97BC88</color>
