--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -108,36 +108,7 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="@dimen/_12sdp"
-            android:paddingVertical="@dimen/_4sdp"
-            android:orientation="vertical"
-            android:background="@drawable/bg_button_8">
-
-            <TextView
-                android:id="@+id/saTag"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Empty"
-                android:textSize="@dimen/_13ssp"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tag"
-                android:textSize="@dimen/_11ssp"
-                android:textColor="@color/gray_2" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:layout_marginHorizontal="@dimen/_12sdp"
-            android:background="@color/gray" />
-
-        <LinearLayout
+            android:id="@+id/sBName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/_12sdp"
@@ -168,6 +139,7 @@
             android:background="@color/gray" />
 
         <LinearLayout
+            android:id="@+id/sBBio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/_12sdp"
