--- a/app/src/main/res/layout/dialog_edit_name.xml
+++ b/app/src/main/res/layout/dialog_edit_name.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/acBack"
+                android:id="@+id/enBack"
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
                 android:background="@drawable/bg_button_3"
@@ -38,12 +38,26 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.9"
                 android:layout_marginHorizontal="@dimen/_12sdp"
-                android:text="Add Username"
+                android:text="Edit Name"
                 android:textSize="@dimen/_15ssp"
                 android:textColor="@color/gray"
                 android:textStyle="bold"
                 android:layout_gravity="center"/>
+
+            <LinearLayout
+                android:id="@+id/enSave"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:background="@drawable/bg_button_3"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_save" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -52,44 +66,29 @@
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="@dimen/_17sdp"
-                    android:layout_height="@dimen/_17sdp"
-                    android:src="@drawable/ic_user" />
-            </LinearLayout>
-
             <EditText
-                android:id="@+id/acUsername"
+                android:id="@+id/enName"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_25sdp"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.9"
-                android:paddingHorizontal="@dimen/_8sdp"
-                android:hint="Username"
+                android:padding="@dimen/_5sdp"
+                android:hint="Name"
                 android:textColorHint="@color/light_gray"
                 android:textSize="@dimen/_12ssp"
                 android:textColor="@color/gray"
-                android:gravity="center_vertical"
-                android:singleLine="true"
+                android:maxLength="25"
+                android:gravity="top"
                 android:background="@android:color/transparent" />
 
-            <LinearLayout
-                android:id="@+id/acAdd"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:background="@drawable/bg_button_3"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="@dimen/_14sdp"
-                    android:layout_height="@dimen/_14sdp"
-                    android:src="@drawable/ic_plus"
-                    android:tint="@color/gray" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/enLimit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="@dimen/_4sdp"
+                android:paddingVertical="@dimen/_5sdp"
+                android:text="25"
+                android:textSize="@dimen/_12ssp"
+                android:textColor="@color/gray" />
         </LinearLayout>
 
         <View
