--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,7 +33,7 @@
                 android:id="@+id/cAvatar"
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
-                android:src="@drawable/avatar" />
+                android:src="@drawable/photo" />
         </LinearLayout>
 
         <LinearLayout
