--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/sPhoto"
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
-                android:src="@drawable/avatar" />
+                android:src="@drawable/photo" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,6 +67,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/sBPhoto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/_12sdp"
@@ -204,6 +205,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/sBSignOut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
