--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -15,7 +15,7 @@
             android:id="@+id/aPhoto"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:src="@drawable/avatar" />
+            android:src="@drawable/photo" />
 
         <ImageView
             android:id="@+id/aSelect"
