--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cProfile"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
-        android:src="@drawable/avatar" />
+        android:src="@drawable/photo" />
 
     <LinearLayout
         android:layout_width="0dp"
