--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,71 +7,132 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/cToolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_45sdp"
         android:background="@color/gray"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/mMenu"
-            android:layout_width="@dimen/_35sdp"
+            android:id="@+id/mToolbar"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_45sdp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:background="@drawable/bg_button_7">
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-            <ImageView
-                android:layout_width="@dimen/_17sdp"
-                android:layout_height="@dimen/_17sdp"
-                android:src="@drawable/ic_menu" />
+            <LinearLayout
+                android:id="@+id/mMenu"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/bg_button_7">
+
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_menu" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
+                android:paddingHorizontal="@dimen/_15sdp"
+                android:text="SCHAT"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15ssp"
+                android:textStyle="bold"
+                android:gravity="center_vertical" />
+
+            <LinearLayout
+                android:id="@+id/mContact"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/bg_button_7">
+
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_user"
+                    android:tint="@color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/mFind"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_45sdp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/bg_button_7">
+
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_find" />
+            </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:paddingHorizontal="@dimen/_15sdp"
-            android:text="SCHAT"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_15ssp"
-            android:textStyle="bold"
-            android:gravity="center_vertical" />
-
         <LinearLayout
-            android:id="@+id/mContact"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_45sdp"
+            android:id="@+id/mfLayout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:visibility="gone"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:background="@drawable/bg_button_7">
+            android:orientation="horizontal"
+            android:background="@drawable/bg_button_9">
 
-            <ImageView
-                android:layout_width="@dimen/_17sdp"
-                android:layout_height="@dimen/_17sdp"
-                android:src="@drawable/ic_user"
-                android:tint="@color/white" />
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/mfBack"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:gravity="center"
+                android:background="@drawable/bg_button_9">
 
-        <LinearLayout
-            android:id="@+id/mFind"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_45sdp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:background="@drawable/bg_button_7">
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_arrow"
+                    android:rotation="180" />
+            </LinearLayout>
 
-            <ImageView
-                android:layout_width="@dimen/_17sdp"
-                android:layout_height="@dimen/_17sdp"
-                android:src="@drawable/ic_find" />
+            <EditText
+                android:id="@+id/mfFind"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_weight="0.9"
+                android:paddingHorizontal="@dimen/_8sdp"
+                android:hint="Pencarian Nama"
+                android:textColorHint="@color/light_gray"
+                android:textSize="@dimen/_12ssp"
+                android:textColor="@color/white"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:background="@android:color/transparent" />
+
+            <LinearLayout
+                android:id="@+id/mfClear"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:visibility="gone"
+                android:gravity="center"
+                android:background="@drawable/bg_button_9">
+
+                <ImageView
+                    android:layout_width="@dimen/_17sdp"
+                    android:layout_height="@dimen/_17sdp"
+                    android:src="@drawable/ic_close"
+                    android:tint="@color/white" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mMessage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_message" />
