--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cButton"
     android:padding="@dimen/_5sdp"
     android:gravity="center"
     android:background="@drawable/bg_button_6">
