--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cl1"
     android:gravity="end"
-    android:layout_margin="@dimen/_5sdp">
+    android:layout_margin="@dimen/_4sdp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -11,6 +12,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/cl2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/_5sdp"
@@ -18,20 +20,23 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/cChat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ini adalah pesan yang kita kirim"
-                android:textSize="@dimen/_10ssp"
+                android:textSize="@dimen/_11ssp"
                 android:textColor="@color/white" />
 
             <ImageView
-                android:layout_width="@dimen/_14sdp"
-                android:layout_height="@dimen/_14sdp"
-                android:paddingStart="@dimen/_3sdp"
+                android:id="@+id/cView"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:paddingStart="@dimen/_4sdp"
                 android:src="@drawable/ic_double_check" />
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/cl3"
             android:layout_width="@dimen/_10sdp"
             android:layout_height="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_minus6sdp"
