--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -116,19 +116,19 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.9"
                 android:padding="@dimen/_5sdp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_gravity="center">
 
                 <EditText
                     android:id="@+id/cInputChat"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_30sdp"
+                    android:layout_height="wrap_content"
                     android:paddingHorizontal="@dimen/_8sdp"
                     android:hint="Pesan"
                     android:textColorHint="@color/light_gray"
                     android:textSize="@dimen/_13ssp"
                     android:textColor="@color/white"
                     android:gravity="center_vertical"
-                    android:singleLine="true"
                     android:background="@android:color/transparent" />
             </LinearLayout>
 
@@ -136,7 +136,7 @@
                 android:id="@+id/cSend"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:layout_gravity="center"
+                android:layout_gravity="bottom"
                 android:gravity="center"
                 android:background="@drawable/bg_button_1">
 
