--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray_2">#636363</color>
     <color name="light_gray">#D6D6D6</color>
     <color name="light_gray_2">#A6A6A6</color>
+    <color name="light_gray_3">#C0C0C0</color>
 </resources>
