Update Some Improvements

--- a/app/src/main/res/drawable/ic_triangle.xml
+++ b/app/src/main/res/drawable/ic_triangle.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="490">
   <path
       android:pathData="M245,456.7l245,-423.4l-490,0z"
-      android:fillColor="#808080"/>
+      android:fillColor="@color/gray"/>
 </vector>
